Fixed vertical align in older androids. Fixes #92

--- a/src/plugins/nav/_plugin.scss
+++ b/src/plugins/nav/_plugin.scss
@@ -39,8 +39,9 @@ $picnic-nav-sides: .6em !default;
 
     position: relative;
     top: 50%;
+    -webkit-transform: translateY(-50%);
     transform: translateY(-50%);
-    }
+  }
 
   .brand {
     font-weight: 700;
